// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns article results when searching article R1225-18 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 22.492731,
      "cdtnId": "f13147ec33",
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [],
  "themes": Array [],
}
`;

exports[`returns search results for demission from datafiller 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [],
      "cdtnId": "ea03713a82",
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
    Object {
      "_score": 3.4365463,
      "cdtnId": "f13147ec33",
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "position": 1,
          "slug": "/themes/demission",
        },
      ],
      "cdtnId": "8c42435f9a",
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "position": 1,
          "slug": "/themes/demission",
        },
      ],
      "cdtnId": "5d4a0ee541",
      "description": "La démission permet au salarié de rompre son CDI de sa propre initiative. Si un délai de préavis est prévu, il doit être respecté.",
      "slug": "la-demission",
      "source": "page_fiche_ministere_travail",
      "title": "La démission",
      "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission",
    },
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "position": 1,
          "slug": "/themes/demission",
        },
      ],
      "description": "Le Code du travail ne prévoit aucune forme particulière pour présenter sa démission : elle peut être verbale, écrite ou résulter d’un comportement sans ambiguïté du salarié (ce qui n’est pas le cas, p",
      "slug": "la-demission#Comment-presenter-une-demission",
      "source": "fiches_ministere_travail",
      "title": "La démission : comment présenter une démission ?",
    },
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "position": 1,
          "slug": "/themes/demission",
        },
      ],
      "cdtnId": "38474d168c",
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
  ],
  "themes": Array [
    Object {
      "_score": 1.9145181,
      "algo": "fulltext",
      "cdtnId": "a9ccf1d613",
      "slug": "demission",
      "source": "themes",
      "title": "Démission",
    },
  ],
}
`;

exports[`returns search results for demission from elastic 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 3.4365463,
      "cdtnId": "f13147ec33",
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
    Object {
      "_score": 3.3062394,
      "cdtnId": "ea03713a82",
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "_score": 10.078829,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "position": 1,
          "slug": "/themes/demission",
        },
      ],
      "cdtnId": "8c42435f9a",
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
    Object {
      "_score": 1.3151006,
      "action": "Calculer",
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "position": 1,
          "slug": "/themes/demission",
        },
      ],
      "cdtnId": "1eea193273",
      "description": "Calculez la durée de préavis à respecter en cas de démission",
      "slug": "preavis-demission",
      "source": "outils",
      "title": "Préavis de démission",
    },
    Object {
      "_score": 1.2952552,
      "action": "Estimer",
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Licenciement : droits des salariés et procédures",
          "position": 4,
          "slug": "/themes/licenciement-droits-des-salaries-et-procedures",
        },
      ],
      "cdtnId": "d8a3605790",
      "description": "Estimez simplement le montant de l’indemnité de licenciement",
      "slug": "indemnite-licenciement",
      "source": "outils",
      "title": "Indemnité de licenciement",
    },
    Object {
      "_score": 8.706947,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "position": 1,
          "slug": "/themes/demission",
        },
      ],
      "cdtnId": "38474d168c",
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
    Object {
      "_score": 3.6849642,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Santé, sécurité et conditions de travail",
          "position": 6,
          "slug": "/themes/sante-securite-et-conditions-de-travail",
        },
        Object {
          "label": "Santé au travail",
          "position": 3,
          "slug": "/themes/sante-au-travail",
        },
        Object {
          "label": "Maladie",
          "position": 1,
          "slug": "/themes/maladie",
        },
      ],
      "cdtnId": "36c2fc8868",
      "description": "Le salarié en arrêt maladie pendant son préavis perçoit les indemnités habituelles. Le préavis est prolongé si l'arrêt est d'origine professionnelle.",
      "slug": "arret-maladie-pendant-le-preavis-quelles-consequences",
      "source": "fiches_service_public",
      "title": "Arrêt maladie pendant le préavis : quelles conséquences ?",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2614",
    },
    Object {
      "_score": 2.9534154,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Documents à remettre au salarié",
          "position": 0,
          "slug": "/themes/documents-a-remettre-au-salarie",
        },
      ],
      "cdtnId": "59a4d4173c",
      "description": "Le certificat de travail est un document remis par l'employeur au salarié à la date de fin du contrat de travail. Il est remis au salarié pour tout type de contrat de travail (CDI, CDD...), quel que soit le motif de la rupture (démission, licenciement...).",
      "slug": "certificat-de-travail",
      "source": "fiches_service_public",
      "title": "Certificat de travail",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F87",
    },
    Object {
      "_score": 1.2357258,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Embauche et contrat de travail",
          "position": 1,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        Object {
          "label": "Embauche",
          "position": 1,
          "slug": "/themes/embauche",
        },
        Object {
          "label": "Période d’essai",
          "position": 3,
          "slug": "/themes/periode-dessai",
        },
      ],
      "cdtnId": "772cb955ce",
      "description": "Pendant la période d’essai, le contrat de travail peut être rompu librement par l’employeur. L’employeur doit dans ce cas informer le salarié et respecter un délai de prévenance.",
      "slug": "rupture-de-periode-dessai-a-linitiative-de-lemployeur",
      "source": "modeles_de_courriers",
      "title": "Rupture de période d’essai à l’initiative de l’employeur",
    },
    Object {
      "_score": 1.1560779,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Rupture conventionnelle",
          "position": 3,
          "slug": "/themes/rupture-conventionnelle",
        },
        Object {
          "label": "Rupture conventionnelle individuelle",
          "position": 1,
          "slug": "/themes/rupture-conventionnelle-individuelle",
        },
      ],
      "cdtnId": "a712ecb976",
      "description": "La rupture conventionnelle individuelle est une modalité de rupture spécifique du CDI. Elle nécessite le consentement de l’employeur et du salarié, et son homologation par l’administration. La rupture ouvre droit à une indemnité de rupture conventionnelle. Ce modèle permet d’initier la procédure de rupture par l’invitation à un premier entretien.",
      "slug": "demande-de-rendez-vous-en-vue-dune-rupture-conventionnelle",
      "source": "modeles_de_courriers",
      "title": "Demande de rendez-vous en vue d’une rupture conventionnelle",
    },
    Object {
      "_score": 1.1512249,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Documents à remettre au salarié",
          "position": 0,
          "slug": "/themes/documents-a-remettre-au-salarie",
        },
      ],
      "cdtnId": "19837df114",
      "description": "Le certificat de travail est un document obligatoire remis par l’employeur au salarié à la date de fin du contrat de travail.",
      "slug": "certificat-de-travail",
      "source": "modeles_de_courriers",
      "title": "Certificat de travail",
    },
  ],
  "themes": Array [
    Object {
      "_score": 1.9145181,
      "algo": "fulltext",
      "cdtnId": "a9ccf1d613",
      "slug": "demission",
      "source": "themes",
      "title": "Démission",
    },
  ],
}
`;

exports[`returns unique documents from prequalified data (same slug but different source) 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 1.0106163,
      "cdtnId": "ea03713a82",
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Documents à remettre au salarié",
          "position": 0,
          "slug": "/themes/documents-a-remettre-au-salarie",
        },
      ],
      "cdtnId": "19837df114",
      "description": "Le certificat de travail est un document obligatoire remis par l’employeur au salarié à la date de fin du contrat de travail.",
      "slug": "certificat-de-travail",
      "source": "modeles_de_courriers",
      "title": "Certificat de travail",
    },
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l’entreprise",
          "position": 8,
          "slug": "/themes/depart-de-lentreprise",
        },
        Object {
          "label": "Documents à remettre au salarié",
          "position": 0,
          "slug": "/themes/documents-a-remettre-au-salarie",
        },
      ],
      "cdtnId": "59a4d4173c",
      "description": "Le certificat de travail est un document remis par l'employeur au salarié à la date de fin du contrat de travail. Il est remis au salarié pour tout type de contrat de travail (CDI, CDD...), quel que soit le motif de la rupture (démission, licenciement...).",
      "slug": "certificat-de-travail",
      "source": "fiches_service_public",
      "title": "Certificat de travail",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F87",
    },
  ],
  "themes": Array [
    Object {
      "_score": 2.5882375,
      "algo": "fulltext",
      "cdtnId": "5594695039",
      "icon": "Contract",
      "slug": "embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
    Object {
      "_score": 0.9558022,
      "algo": "fulltext",
      "cdtnId": "e4982f0aa9",
      "icon": "Depart",
      "slug": "depart-de-lentreprise",
      "source": "themes",
      "title": "Départ de l’entreprise",
    },
  ],
}
`;
